--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,8 @@ edition = "2018"
 
 [dependencies]
 rocket = "0.4"
-serde = "1.0"
+serde = { version = "1.0", features = ["derive"]}
 diesel = { version = "1.4", features = ["postgres"] }
-
-[dependencies.serde_derive]
-version = "1.0"
 
 [dependencies.rocket_contrib]
 version = "0.4"
